--- a/JPAParks/build.gradle
+++ b/JPAParks/build.gradle
@@ -42,6 +42,13 @@ ext {
 
 // define project specific dependencies
 dependencies {
+ compile 'org.junit.jupiter:junit-jupiter-api:5.0.1'
+  testCompile('org.apiguardian:apiguardian-api:1.0.0')
+  testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.1',          
+    'org.junit.vintage:junit-vintage-engine:4.12.1',
+    'org.junit.platform:junit-platform-launcher:1.0.1',
+    'org.junit.platform:junit-platform-runner:1.0.1')
+    
   compile "mysql:mysql-connector-java:5.1.47"
   compile "log4j:log4j:1.2.17"
   compile "org.hibernate:hibernate-core:$hibernateVersion"
